--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="scotchTodo">
 <head>
+    <!-- meta data -->
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width-width, initial-scale=1">
+    <title>Todo App</title>
+    <!-- Scrolls -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <!-- load bootstrap -->
+    <style>
+        html{overflow-y: scroll;}
+        body{padding-top: 50px;}
+        #todo-list{margin-bottom: 30px;}
+    </style>
+    <!-- load jquery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <!-- load angular -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+    <!-- load js file -->
+    <script src="core.js"></script>
 </head>
-<body>
+<body ng-controller="mainController">
+    <div class="container">
+        <!-- header and todo count -->
+        <div class="jumbotron text-center">
+            <h1>I am a todo-aholic <span class="label label-info">{{todo.length}}</span></h1>
+        </div>
+        <!-- todo list -->
+        <div id="todo-list" class="row">
+            <div class="col-sm-4 col-sm-offset-4">
+                <!-- LOOP OVER the tod $scope.todos -->
+                <div class="checkbox" ng-repeat="todo in todos">
+                    <label><input type="checkbox" ng-click="deleteTodo(todo._id)">
+                        {{todo.text}}
+                    </label>
+                </div>
+            </div>
+        </div>
+        <!-- form to create todo -->
+        <div id="todo-form" class="row">
+            <div class="col-sm-8 col-sm-offset-2 text-center">
+                <form>
+                    <div class="form-group">
+                        <!-- bind this value to formData.text in angular -->
+                        <input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy" ng-model="formData.text">
+                    </div>
+                        <!-- createTodo() will create new todos -->
+                        <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()"> ADD </button>
+                </form>
+            </div>
+        </div>
+
+    </div>
+
 
 </body>
 </html>
